# eci2017-concurrency

./: .gitignore  README.md  Respuestas.docx
HERD/ppc/: regen.sh
HERD/pso/: pso.cat  regen.sh
HERD/sc/: regen.sh
HERD/tests/: PPC-3-TAR.litmus  PPC-5-2F-LB.litmus  PPC-8-SIRIW.litmus  PPC-9-SIRIW-2.litmus  X86-1-SB.litmus  X86-2-LB.litmus  X86-3-TAR.litmus  X86-4-1F-LB.litmus  X86-5-2F-LB.litmus  X86-6-WRC.litmus  X86-7-IRIW.litmus  X86-8-SIRIW.litmus  X86-9-SIRIW-2.litmus  X86-PSO-TSO-NOREORD.litmus  X86-PSO-TSO-REORD.litmus
HERD/tso/: regen.sh
cpp/: CMakeLists.txt  compile.sh  ex1.cc  ex2-relacy.cc  ex2.cc  ex2_cppmem.txt
java/ECI2017_Concurrency_A/src/com/company/: Main.java
java/ECI2017_Concurrency_B/src/com/company/: Main.java
